[package]
name = "prometheus-rs"
version = "0.1.0"
edition = "2024"
description = "Scaffold for a Rust port of the Prometheus Lua obfuscator"
license = "AGPL-3.0-only"

[dependencies]
nom = "7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
